// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > should be able to describe tree 1`] = `
"<container id="1" markerId="19" >
  Legend had it that the Whispering Woods held an ancient secret, one that connected the world of man ...
  <text id="2" markerId="999" ariaLabel="image description, it could be a long text, very loooooooooooooooooooooooooooooooooooooooooong">
    world
  </text>
  <img id="3" markerId="20" ariaLabel="image description" storyContent="Legend had it that the Whispering Woods held an ancient secret, one that connected the world of man ...">
    world 2345
    <img id="3" markerId="20" ariaLabel="image description" storyContent="Legend had it that the Whispering Woods held an ancient secret, one that connected the world of man ...">
    </img>
    <>
    </>
  </img>
</container>"
`;

exports[`utils > should be able to describe tree, filterNonTextContent = true 1`] = `
"<container id="1" markerId="19" >
  Legend had it that t...
  <text id="2" markerId="999" ariaLabel="image description, i...">
    world
  </text>
  <img id="3" markerId="20" ariaLabel="image description" storyContent="Legend had it that t...">
    world 2345
  </img>
</container>"
`;
